--- a/.gitignore
+++ b/.gitignore
@@ -26,41 +26,28 @@
 
 
 
-# =========================
 # Node dependencies
-# =========================
-/node_modules          # frontend node_modules
-/backend/node_modules   # backend node_modules
+node_modules/
+backend/node_modules/
 
-# =========================
 # Logs
-# =========================
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# =========================
-# Environment files
-# =========================
+# Environment variables
 .env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
-# =========================
-# Build / Production
-# =========================
+# Build output
 /build
 /backend/build
 
-# =========================
-# Coverage & Testing
-# =========================
-/coverage
-/backend/coverage
-
-# =========================
-# OS / Misc
-# =========================
+# OS files
 .DS_Store
+
+# Coverage
+/coverage
